--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
   <div class="bg-glow"></div>
 
   <header>
-    <h1 class="name">Eric Lang’at</h1>
+    <h1 class="name">Eric Kiptoo Mutai</h1>
     <p class="title">AI Engineer • Web Developer • Automation Specialist</p>
   </header>
 
@@ -179,9 +179,10 @@
 
     <section class="card">
       <h2>Contact</h2>
-      <p>Email: yourname@email.com</p>
-      <p>GitHub: github.com/yourusername</p>
-      <p>LinkedIn: linkedin.com/in/yourname</p>
+      <p>Email: kaasisi120@protonmail.com</p>
+      <p>GitHub: github.com/kaasisi</p>
+      <p>LinkedIn: linkedin.com/in/ericmutai</p>
+      <p>Tel contact: +254712190927</p>
     </section>
 
   </div>
@@ -194,3 +195,4 @@
 
 </body>
 </html>
+
