--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Eric Lang’at | Futuristic CV</title>
+  <title> This is Eric, embracing the Future</title>
 
   <style>
     * {
-      margin: 0;
+      margin: 0; 
       padding: 0;
       box-sizing: border-box;
       font-family: "Segoe UI", system-ui, sans-serif;
@@ -130,15 +130,15 @@
 
   <header>
     <h1 class="name">Eric Kiptoo Mutai</h1>
-    <p class="title">AI Engineer • Web Developer • Automation Specialist</p>
+    <p class="title">AI Prospective Engineer • Web Developer • Cloud Practitioner </p>
   </header>
 
   <div class="container">
 
     <section class="card">
-      <h2>Profile</h2>
+      <h2>Profile - What I am passionate about</h2>
       <p>
-        Results-driven developer with a strong focus on artificial intelligence,
+        I am a results-driven developer with a strong focus on artificial intelligence,
         automation, and modern web technologies. Passionate about building
         futuristic digital systems that solve real-world problems.
       </p>
@@ -153,6 +153,8 @@
         <div class="skill">API Integration</div>
         <div class="skill">Data Annotation & Analysis</div>
         <div class="skill">Responsive UI Design</div>
+        <div class="skill">Cloud Practitioner</div>
+        <div class="skill">Cyber Security</div>
       </div>
     </section>
 
@@ -165,7 +167,7 @@
           <p>Designing autonomous agents and intelligent workflows for business automation.</p>
         </div>
         <div>
-          <span>2023 – 2024</span>
+          <span>2022 – Present</span>
           <strong>Web Developer</strong>
           <p>Developed responsive websites and modern dashboards using clean, scalable code.</p>
         </div>
@@ -175,6 +177,10 @@
     <section class="card">
       <h2>Education</h2>
       <p>Computer Science / Artificial Intelligence & Data Science (Ongoing)</p>
+      <p>Diploma in Information Technology</p>
+      <p>AWS Restart Cloud program</p>
+      <p>Cisco Networking Academy for Cyber Security</p>
+      <p>Ciwab training on General IT and data handling</p>
     </section>
 
     <section class="card">
@@ -195,4 +201,5 @@
 
 </body>
 </html>
+
 
