--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
   <div class="container">
 
     <section class="card">
-      <h2>Profile - What I am passionate about</h2>
+      <h2>Professional Summary </h2>
       <p>
         I am a results-driven developer with a strong focus on artificial intelligence,
         automation, and modern web technologies. Passionate about building
@@ -162,9 +162,14 @@
       <h2>Experience</h2>
       <div class="timeline">
         <div>
+          <span>2023 - 2025</span>
+          <strong>Intern at Water Resources Authority (parastatal)</strong>
+          <p>I gained skills in data analysis and OS management which increased efficiency of the company. </p>
+        </div>
+        <div>
           <span>2024 – Present</span>
-          <strong>AI Automation Developer</strong>
-          <p>Designing autonomous agents and intelligent workflows for business automation.</p>
+          <strong>Cloud Practitioner</strong>
+          <p> Deploying cloud computing models such as IaaS, Paas and SaaS for scalling businesses.</p>
         </div>
         <div>
           <span>2022 – Present</span>
@@ -201,5 +206,6 @@
 
 </body>
 </html>
+
 
 
